<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nuozhu.skyrimlibrary.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notice"
        android:title="@string/notice"
        android:icon="@drawable/notice"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/exit"
        app:showAsAction="never" />
</menu>