<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewStart">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/notice"
                    android:textSize="22sp"
                    android:scrollbars="none"/>

                <ImageButton
                    android:id="@+id/buttonDismiss"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:layout_marginEnd="@dimen/general_margin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/close"
                    app:srcCompat="@drawable/close" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="@dimen/general_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/notice_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_content"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/buttonAction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/notice_action" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>